# BOTMEV

./: .env.example  .gitignore  Cargo.toml  Dockerfile  HYPERLIQUID_INTEGRATION_GUIDE.md  HYPERLIQUID_STATUS.md  Makefile  QUICK_START.md  README.md  WEBSOCKET_FIX_SUMMARY.md  codecov.yml  deny.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml  rollback.yml
.kiro/specs/fix-hyperliquid-websocket/: requirements.md
.kiro/specs/hyperliquid-websocket-integration/: design.md  requirements.md  task-7-implementation-summary.md  task-8-implementation-summary.md  tasks.md
.kiro/specs/mev-bot-complete/: design.md  requirements.md  tasks.md
benches/: mempool_ingestion.rs  simulation_engine.rs  strategy_performance.rs
config/: dev.yml  filter_rules.yml  mainnet.yml  my-config.yml  strategies.yml  testnet.yml
crates/mev-bot/: Cargo.toml
crates/mev-bot/src/: main.rs
crates/mev-config/: Cargo.toml
crates/mev-config/src/: lib.rs
crates/mev-core/: BUNDLE_SYSTEM_SUMMARY.md  Cargo.toml  OPERATIONAL_RUNBOOK.md  SIMULATION_ENHANCEMENT_SUMMARY.md  SIMULATION_OPTIMIZER_SUMMARY.md  WEEK3_IMPLEMENTATION_SUMMARY.md  build.rs
crates/mev-core/examples/: decision_path_demo.rs  simulation_throughput_demo.rs
crates/mev-core/proto/: simulation.proto
crates/mev-core/src/: abi_decoder.rs  cpu_pinning.rs  decision_path.rs  decision_path_manager.rs  grpc_service.rs  latency_monitor.rs  lib.rs  metrics.rs  optimization.rs  persistence.rs  rpc_client.rs  simulation.rs  simulation_benchmark.rs  simulation_optimizer.rs  state_manager.rs  strategy_types.rs  types.rs  utils.rs
crates/mev-core/src/bundle/: builder.rs  execution_tracker.rs  failure_handler.rs  integration_tests.rs  key_manager.rs  mainnet_dry_run.rs  mod.rs  signer.rs  submission.rs  submitter.rs  types.rs  victim_generator.rs
crates/mev-core/src/monitoring/: dashboards.rs  health.rs  logging.rs  metrics.rs  mod.rs
crates/mev-core/tests/: decision_path_integration.rs  fork_simulation_tests.rs  grpc_simulation_tests.rs  simulation_optimizer_tests.rs
crates/mev-hyperliquid/: Cargo.toml  DUAL_CHANNEL_INTEGRATION_TESTS.md  RPC_RESILIENCE.md  RPC_SERVICE_TESTS.md
crates/mev-hyperliquid/src/: adapter.rs  config.rs  lib.rs  metrics.rs  opportunity_detector.rs  opportunity_detector_tests.rs  parser.rs  rpc_service.rs  service_manager.rs  types.rs  websocket.rs
crates/mev-hyperliquid/tests/: dual_channel_integration.rs  integration_test.rs
crates/mev-mempool/: Cargo.toml  README.md
crates/mev-mempool/examples/: consumer_example.rs  demo.rs
crates/mev-mempool/src/: abi_decoder.rs  backpressure.rs  filter_config.rs  filters.rs  lib.rs  main.rs  optimized_abi_decoder.rs  parser.rs  ring_buffer.rs  websocket.rs
crates/mev-strategies/: Cargo.toml
crates/mev-strategies/src/: arbitrage.rs  backrun.rs  config_manager.rs  config_tests.rs  lib.rs  liquidation.rs  sandwich.rs  strategy_engine.rs  strategy_types.rs  test_utils.rs
crates/mev-strategies/src/backrun/: tests.rs
crates/mev-strategies/src/sandwich/: tests.rs
docs/: architecture.md  deployment.md  hyperliquid-integration.md  operational-runbook.md  security.md
monitoring/grafana/dashboards/: mev-bot-dashboard.json  mev-bot-latency.json
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
scripts/: chaos-testing.bat  demo-setup.bat  final-validation.bat  help.bat  monitor-hyperliquid.bat  performance-tuning.bat  run-all-tests.bat  setup.bat  start-all.bat  start-all.ps1  test-coverage.bat  test.bat  validate-ci.bat  validate-deployment.bat  validate-hyperliquid-mainnet.bat
tests/: anvil_integration.rs  hyperliquid_mainnet_validation.rs  integration.rs  load_testing.rs
