[package]
name = "mev-bot"
version = "0.1.0"
edition = "2021"
description = "MEV Bot - Main application binary"

[[bin]]
name = "mev-bot"
path = "src/main.rs"

[dependencies]
mev-core = { path = "../mev-core" }
mev-strategies = { path = "../mev-strategies" }
mev-mempool = { path = "../mev-mempool" }
mev-config = { path = "../mev-config" }
mev-hyperliquid = { path = "../mev-hyperliquid" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }
